--- a/templates/base.html
+++ b/templates/base.html
@@ -143,6 +143,14 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     {% if user.is_authenticated %}
+                        {% if not user.is_staff %}
+                        <li class="nav-item">
+                            <a class="nav-link" href="{% url 'document_management' %}">
+                                <i class="bi bi-folder2-open me-1"></i>
+                                My Documents
+                            </a>
+                        </li>
+                        {% endif %}
                         <li class="nav-item">
                             <span class="navbar-text me-3">
                                 <i class="bi bi-person-circle me-1"></i>
