--- a/templates/dashboard/user_dashboard.html
+++ b/templates/dashboard/user_dashboard.html
@@ -52,7 +52,7 @@
                 </h2>
                 <div>
                     <a href="{% url 'document_management' %}" class="btn btn-primary">
-                        <i class="fas fa-folder-open me-2"></i>Manage Documents
+                        <i class="fas fa-folder-open me-2"></i>Manage Repository
                     </a>
                 </div>
             </div>
