--- a/templates/base.html
+++ b/templates/base.html
@@ -150,6 +150,13 @@
                                 My Documents
                             </a>
                         </li>
+                        {% else %}
+                        <li class="nav-item">
+                            <a class="nav-link" href="{% url 'admin_weaviate' %}">
+                                <i class="bi bi-database me-1"></i>
+                                Weaviate Repository
+                            </a>
+                        </li>
                         {% endif %}
                         <li class="nav-item">
                             <span class="navbar-text me-3">
